# serializer version: 1
# name: TestPasswordResetSend.test_gadget_does_not_exist
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'gadget': list([
        'nonexistent@example.com',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestPasswordResetSend.test_identifier_cooldown
  dict({
    'code': 'api.too_many_requests',
    'errors': dict({
      'retry_after': list([
        60,
      ]),
    }),
    'message': 'Too many requests. Please try again in 1 minute',
    'success': False,
  })
# ---
# name: TestPasswordResetSend.test_success[email]
  dict({
    'message': 'Reset code sent',
    'success': True,
  })
# ---
# name: TestPasswordResetSend.test_success[phone]
  dict({
    'message': 'Reset code sent',
    'success': True,
  })
# ---
